--- a/MVA/index.html
+++ b/MVA/index.html
@@ -10,6 +10,7 @@
 <p>&nbsp;</p>
 <p><strong>Slides of the course</strong></p>
 <ul>
+	<iframe src="Part I.pdf" title="essai"> </iframe>
   <li>Part I : Introduction <em><a href="getpapers.php?file=Part I.pdf&amp;type=pdf">(download</a>)</em></li>
 </ul>
 <ul>
