--- a/MVA/index.html
+++ b/MVA/index.html
@@ -9,9 +9,8 @@
 <p align="center"><font size="5" face="Arial, Helvetica, sans-serif"><strong>MVA Material for the course on Audio Signal Processing</strong></font></p>
 <p>&nbsp;</p>
 <p><strong>Slides of the course</strong></p>
-		<iframe src="Part I.pdf" title="essai"> </iframe>
 <ul>
-  <li>Part I : Introduction <em><a href="getpapers.php?file=Part I.pdf&amp;type=pdf">(download</a>)</em></li>
+  <li>Part I : Introduction <em><a href="Part I.pdf" target="_blank">(download</a>)</em></li>
 </ul>
 <ul>
   <li>Part II : Analogic signal/Digital signal <em><a href="getpapers.php?file=Part II.pdf&amp;type=pdf">(download</a>)</em></li>
