--- a/MVA/index.html
+++ b/MVA/index.html
@@ -68,7 +68,7 @@
 <ul>
   <li>Audio Denoising by Time-Frequency
 Block Thresholding  (2008) <em>(<a href="https://www.di.ens.fr/~mallat/papiers/AudioBlock.pdf">download</a>)</em></li>
-  <li>Elimination of the Musical Noise Phenomenon with the Ephraim and Malah Noise Suppressor (1994) (<em><a href="Cappe.pdf" type="application/pdf">download</a></em> + the reference paper <em><a href="EM.pdf">: download</a></em>) </li>
+  <li>Elimination of the Musical Noise Phenomenon with the Ephraim and Malah Noise Suppressor (1994) (<em><a href="https://www.dropbox.com/scl/fi/jufuch8ebp40slmk998hr/Cappe.pdf?rlkey=i8h09mwzsw9clxnlp31chl4fu&dl=0">download</a></em> + the reference paper <em><a href="EM.pdf">: download</a></em>) </li>
   <li>A modeling and algorithmic framework for (non)social (co)sparse audio restoration (2017) (<em><a href="http://arxiv.org/abs/1711.11259">arXiv:1711.11259)</a></em> </li>
 </ul>
 
