--- a/MVA/index.html
+++ b/MVA/index.html
@@ -77,7 +77,7 @@ Block Thresholding  (2008) <em>(<a href="https://www.di.ens.fr/~mallat/papiers/A
    <ul>
 
     <li> Improved Phase Vocoder Time-Scale Modification of Audio (1999)
-  <em>(<a href="phase_vocoder.pdf">download</a>)</em>
+  <em>(<a href="https://citeseerx.ist.psu.edu/document?repid=rep1&type=pdf&doi=8312d42cab3f14152d8e6406a9c0463737b6aa45">download</a>)</em>
       <ul>
         <li>Time contraction/dilation </li>
         <li>Using an adaptive window size (2015) (1 more paper :  <em><a href="windowadapt.pdf">download</a></em>)</li>
