--- a/MVA/index.html
+++ b/MVA/index.html
@@ -10,7 +10,7 @@
 <p>&nbsp;</p>
 <p><strong>Slides of the course</strong></p>
 <ul>
-  <li>Part I : Introduction <em><a href="Part-I.pdf" target="_blank">(download</a>)</em></li>
+  <li>Part I : Introduction <em><a href="Part I.pdf" target="_blank">(download</a>)</em></li>
 </ul>
 <ul>
   <li>Part II : Analogic signal/Digital signal <em><a href="Part-II.pdf">(download</a>)</em></li>
