--- a/MVA/index.html
+++ b/MVA/index.html
@@ -13,22 +13,22 @@
   <li>Part I : Introduction <em><a href="Part I.pdf" target="_blank">(download</a>)</em></li>
 </ul>
 <ul>
-  <li>Part II : Analogic signal/Digital signal <em><a href="Part-II.pdf">(download</a>)</em></li>
+  <li>Part II : Analogic signal/Digital signal <em><a href="Part II.pdf">(download</a>)</em></li>
 </ul>
 <ul>
-  <li>Part III : Filtering <em><a href="Part-III.pdf">(download</a>)</em>&nbsp;</li>
+  <li>Part III : Filtering <em><a href="Part III.pdf">(download</a>)</em>&nbsp;</li>
 </ul>
 <ul>
-  <li>Part IV : Stochastic signal processing <em><a href="Part-IV.pdf">(download</a>)</em>&nbsp;</li>
+  <li>Part IV : Stochastic signal processing <em><a href="Part IV.pdf">(download</a>)</em>&nbsp;</li>
 </ul>
 <ul>
-  <li>Part V : Speech processing <em><a href="Part-V.pdf">(download</a>)</em></li>
+  <li>Part V : Speech processing <em><a href="Part V.pdf">(download</a>)</em></li>
 </ul>
 <ul>
-  <li>Part VI : Denoising <em><a href="Part-VI.pdf">(download</a>)</em></li>
+  <li>Part VI : Denoising <em><a href="Part VI.pdf">(download</a>)</em></li>
 </ul>
 <ul>
-  <li>Part VII : Time-frequency analysis <em><a href="Part-VII.pdf">(download</a>)</em></li>
+  <li>Part VII : Time-frequency analysis <em><a href="Part VII.pdf">(download</a>)</em></li>
 </ul>
 
 <p>&nbsp;</p>
