--- a/MVA/index.html
+++ b/MVA/index.html
@@ -70,6 +70,7 @@
 Block Thresholding  (2008) <em>(<a href="https://www.di.ens.fr/~mallat/papiers/AudioBlock.pdf">download</a>)</em></li>
   <li>Elimination of the Musical Noise Phenomenon with the Ephraim and Malah Noise Suppressor (1994) (<em><a href="Cappe.pdf">download</a></em>) </li>
   <li>A modeling and algorithmic framework for (non)social (co)sparse audio restoration (2017) (<em><a href="http://arxiv.org/abs/1711.11259">arXiv:1711.11259)</a></em> </li>
+<li> Wind Noise Reduction using Non-negative Sparse Coding (2007) (<em><a href="http://arxiv.org/abs/1711.11259">https://backend.orbit.dtu.dk/ws/portalfiles/portal/3848474/Schmidt.pdf)</a></em> </li>
 </ul>
 
 
