--- a/MasterP6/index.html
+++ b/MasterP6/index.html
@@ -48,7 +48,7 @@
 		<ul>
 			<li> Part I : corresponding to a summary of the paper </li>
 			<li> Part II : (more personal) corresponding to your critics (positive/negative), various extensions, ... 
-			<li> A bibliography (you are encouraged to talk about other papers than the reference paper in Part II) </li>
+			<li> I expect a bibliography (you are encouraged to talk about other papers than the reference paper in Part II) </li>
 			<li> (not required) Part II could include numerical experiments on financial time series. If you want some data
 			send me an email with a clear eplanation of the data you need (time sampling, information, ...), I'll do my best to find some data. </li>
 			<li> The complexity of the papers is classified from * to ***. Part II is expected to be richer for "simpler" papers (*) than for "complex" papers </li>
