--- a/MasterP6/index.html
+++ b/MasterP6/index.html
@@ -16,11 +16,12 @@
     <p align="center">&nbsp;</p>
     <p align="left"><font face="Arial, Helvetica, sans-serif" size="5"><strong>Slides for the different parts of the course</strong></font></p>
     <p>Introduction <em><a href="introduction.pdf" target="_blank"> Introduction </a></em></p>
-    <p>Partie I <em><a href="Part 1.pdf" target="_blank"> Market and financial assets </a></em></p>
-    <p>Partie II  <em><a href="Part 2.pdf" target="_blank"> Orderbook dynamics </a></em></p>
-    <p>Partie III <em><a href="Part 3.main.pdf" target="_blank"> Tick by tick time-series (main slides) </a></em></p>
-    <p>Partie IV <em><a href="Part 4.pdf" target="_blank"> Advanced applications on Hawkes processes </a></em></p>
-    <p>Partie V <em><a href="Part 5.pdf" target="_blank"> Scale Invariance - Multifractal Models - Rough Volatility - log S-fBm models </a></em></p>
+    <p>Part I <em><a href="Part 1.pdf" target="_blank"> Market and financial assets </a></em></p>
+    <p>Part II  <em><a href="Part 2.pdf" target="_blank"> Orderbook dynamics </a></em></p>
+    <p>Part III <em><a href="Part 3.main.pdf" target="_blank"> Tick by tick time-series (main slides) </a></em></p>
+    <p>Part IIIbis <em><a href="Part 3.hawkes.pdf" target="_blank"> Hawkes processes theory </a></em></p>
+    <p>Part IV <em><a href="Part 4.pdf" target="_blank"> Advanced applications on Hawkes processes </a></em></p>
+    <p>Part V <em><a href="Part 5.pdf" target="_blank"> Scale Invariance - Multifractal Models - Rough Volatility - log S-fBm models </a></em></p>
     <!-- Partie III : pas de transparents
     <p>Partie IV : <em><a href="getpapers.php?file=Part_IV.pdf&amp;type=pdf">transparents</a></em></p>
     <p>Partie V : <em><a href="getpapers.php?file=Partie_V.pdf&amp;type=pdf">transparents</a></em>
