--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <p align="left"><font size="3"><strong>Chief Scientific Officer</strong></font><br>
             <a href="https://prairie-institute.fr"><strong> <font color="#990099">Health Data Hub</font></strong></a></p>
           <p align="left"><br>
-            <em><font size="2"> firstnme.lastname@cnrs.fr</font></em></p></td>
+            <em><font size="2"> firstnme.lastnme@cnrs.fr</font></em></p></td>
       </tr>
     </table>
   </div>
