Refonte du site

--- a/index.html
+++ b/index.html
@@ -46,19 +46,17 @@
   
 
 <MENU>
-  <p><A HREF="biblio.html"><font size="2"><img src="images/puce2.gif" width="9" height="10" border="0"></font><strong><font color="#000000" size="3" face="Arial, Helvetica, sans-serif">Bibliography.</font></strong></A><br>
-    <BR>
-
-        
-  <a href="biblio.html#STUDENTS"><font size="2"><img src="images/puce2.gif" width="9" height="10" border="0"></font><strong><font color="#000000" size="3" face="Arial, Helvetica, sans-serif">Students/PostDocs/Engineers.</font></strong></a>
   <p><A HREF="biblio.html#CONTRACTS"><font size="2"><img src="images/puce2.gif" width="9" height="10" border="0"></font>
-  <strong><font color="#000000" size="3" face="Arial, Helvetica, sans-serif">Contracts.</font></strong></A></p>
+    <strong><font color="#000000" size="3" face="Arial, Helvetica, sans-serif">Strategic Roles and Leadership. </font></strong></A></p>
+  <a href="biblio.html#STUDENTS"><font size="2"><img src="images/puce2.gif" width="9" height="10" border="0"></font><strong><font color="#000000" size="3" face="Arial, Helvetica, sans-serif">Students/PostDocs/Engineers.</font></strong></a>
+  <p><A HREF="biblio.html"><font size="2"><img src="images/puce2.gif" width="9" height="10" border="0"></font><strong><font color="#000000" size="3" face="Arial, Helvetica, sans-serif">Bibliography.</font></strong></A><br>
+        
   <p><A HREF="biblio.html#SOFTWARES"><font size="2"><img src="images/puce2.gif" width="9" height="10" border="0"></font>
   <strong><font color="#000000" size="3" face="Arial, Helvetica, sans-serif">Softwares.</font></strong></A></p>
   
   
   <p>
-  
+
     <font size="2"><img src="images/puce2.gif" width="9" height="10" border="0"></font>
     <A HREF="MVA"><font color="#000000" size="3" face="Arial, Helvetica, sans-serif"><strong>Material for MVA Master
       </strong></font></A> <br> <br>
