Refonte du site

--- a/MVA/index.html
+++ b/MVA/index.html
@@ -101,6 +101,7 @@
 <h2> Registration to the course : </h2>
 <ul>
     <li> Please fill up this  <a href="https://forms.gle/r2iEzcm3AXkzv8vw9"> form </a> before Februray 7th to notify your registration </li>
+    <li> Each available projects will be presented during the course on <strong> February 5th</strong>  </li>
 </ul>
 
 <h2>Course outline </h2>
